syntax = "proto3";

package authentication;
option go_package = "github.com/nilssonr/agentside-login/api/pb";
import "google/protobuf/timestamp.proto";


service Authentication {
    rpc Authenticate(AuthenticationRequest) returns (User) {}
}

message AuthenticationRequest {
    string username = 1;
    string password = 2;
    string tenant_id = 3;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email_address = 4;
    string tenant_id = 5;
    google.protobuf.Timestamp last_modified_at = 6;
    string last_modified_by = 7;
}

